# uav-navigation

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CPPLINT.cfg  GNUmakefile  README.md
config/: navigation_stack.yaml  ros_gz_bridge.yaml  rosbag_qos_overrides.yaml
docs/: architecture.md  baseline.md  baseline_manifest.yaml  conventions.md  fastlio2_integration_design.md  frame_contract.md  frame_contract_v1.md  ieskf_design.md  ieskf_math_review.md  ikdtree_architecture.md  ikdtree_architecture_review.md  phase1_validation.md  uav_navigation_rules.md
launch/: navigation_stack.launch.py  obstacle_sensing.launch.py
px4_common/: CMakeLists.txt
px4_mapping/: package.xml
px4_navigation/: CMakeLists.txt  package.xml
reviews/: project_status_review.md  remediation_plan.md  (+7 more)
src/fast_lio/: CMakeLists.txt  INTEGRATION.md  package.xml
src/fast_lio/config/: common.yaml  fast_lio.params.yaml  fast_lio_config.yaml  lio_common.yaml  mid360_custom.yaml  mid360_pointcloud2.yaml  profile_mid360_custom.yaml  profile_mid360_pointcloud2.yaml  profile_sim.yaml  simulation.yaml
src/fast_lio/include/IKFoM_toolkit/: PROVENANCE.md
src/fast_lio/include/fast_lio/: commons.hpp  eigen_se3.hpp  ieskf.hpp  ikd_tree_backend.hpp  imu_processor.hpp  imu_trajectory.hpp  lidar_deskewer.hpp  lidar_processor.hpp  lidar_scan.hpp  map_builder.hpp  measurement_synchronizer.hpp  pcl_tree_backend.hpp  point_plane_measurement.hpp  pointcloud2_decoder.hpp  spatial_index.hpp  utils.hpp
src/fast_lio/include/fast_lio/estimator/: estimator.hpp  ikfom_estimator.hpp  ikfom_state.hpp
src/fast_lio/include/fast_lio/ikd/: ikd_tree.h
src/fast_lio/include/fast_lio/input/: lidar_input_adapter.hpp  mid360_custom_adapter.hpp  pointcloud2_adapter.hpp
src/fast_lio/launch/: fast_lio_sim.launch.py  full_debug_session.launch.py  lio.launch.py  px4_fast_lio.launch.py  record_debug_bag.launch.py
src/fast_lio/src/: fast_lio_node.cpp  lidar_deskewer.cpp  measurement_synchronizer.cpp  point_plane_measurement.cpp  pointcloud2_decoder.cpp  utils.cpp
src/fast_lio/src/input/: mid360_custom_adapter.cpp  pointcloud2_adapter.cpp
src/fast_lio/src/map_builder/: ieskf.cpp  ikd_tree.cpp  ikd_tree_backend.cpp  ikfom_estimator.cpp  imu_processor.cpp  lidar_processor.cpp  map_builder.cpp  pcl_tree_backend.cpp
src/fast_lio/test/: test_ieskf.cpp  test_ikfom_estimator.cpp  test_imu_propagation.cpp  test_imu_trajectory.cpp  test_lidar_deskewer.cpp  test_lidar_input_adapters.cpp  test_measurement_synchronizer.cpp  test_parameter_contract.py  test_point_plane_measurement.cpp  test_pointcloud2_decoder.cpp
src/px4_common/: CMakeLists.txt  package.xml
src/px4_common/include/px4_common/: frame_constants.hpp  types.hpp
src/px4_common/include/px4_common/mapping/: voxel_map_interface.hpp  voxel_types.hpp
src/px4_common/include/px4_common/math/: grid.hpp  transforms.hpp
src/px4_common/include/px4_common/time/: pose_buffer.hpp
src/px4_common/include/px4_common/utils/: parameter_loader.hpp
src/px4_common/src/: px4_common.cpp
src/px4_common/test/: test_grid.cpp  test_math_utils.cpp  test_parameter_loader.cpp  test_pose_buffer.cpp  test_transforms.cpp  test_types.cpp  test_voxel_map_interface.cpp  test_voxel_types.cpp
src/px4_mapping/: CMakeLists.txt  package.xml
src/px4_mapping/config/: defaults.yaml
src/px4_mapping/include/px4_mapping/: fast_lio2_node.hpp  global_mapper.hpp  lidar_odometry.hpp  lio_px4_alignment.hpp  lio_px4_bridge.hpp  localization_bridge.hpp  ned_transform_node.hpp  voxel.hpp  voxel_hash_map.hpp  voxmap_manager_node.hpp
src/px4_mapping/include/px4_mapping/time/: pose_buffer.hpp
src/px4_mapping/launch/: fast_lio2.launch.py  global_mapper.launch.py  lidar_odometry.launch.py  lio_px4_alignment.launch.py  lio_px4_bridge.launch.py  localization_bridge.launch.py  mapping.launch.py  ned_transform.launch.py  voxmap_manager.launch.py
src/px4_mapping/src/: fast_lio2_node.cpp  fast_lio2_node_main.cpp  global_mapper.cpp  global_mapper_main.cpp  lidar_odometry.cpp  lidar_odometry_main.cpp  lio_px4_alignment.cpp  lio_px4_alignment_main.cpp  lio_px4_bridge.cpp  lio_px4_bridge_main.cpp  localization_bridge.cpp  localization_bridge_main.cpp  ned_transform_node.cpp  ned_transform_node_main.cpp  voxmap_manager_node.cpp  voxmap_manager_node_main.cpp
src/px4_mapping/test/: test_global_mapper.cpp  test_lio_px4_alignment.cpp  test_lio_px4_bridge.cpp  test_voxel_hash_map.cpp  test_voxel_pool.cpp  test_voxmap_manager_node.cpp
src/px4_nav_common/: CMakeLists.txt  package.xml
src/px4_nav_common/include/px4_nav_common/: frame_constants.hpp  types.hpp
src/px4_nav_common/include/px4_nav_common/mapping/: voxel_map_interface.hpp  voxel_types.hpp
src/px4_nav_common/include/px4_nav_common/math/: grid.hpp
src/px4_nav_common/test/: test_grid.cpp  test_types.cpp  test_voxel_map_interface.cpp  test_voxel_types.cpp
src/px4_navigation/: CMakeLists.txt  package.xml
src/px4_navigation/config/: livox_mid360_processor.yaml  obstacle_distance_publisher.yaml  obstacle_perception.yaml
src/px4_navigation/include/px4_navigation/: a_star_planner.hpp  livox_mid360_processor.hpp  local_plan_grid.hpp  obstacle_distance_publisher.hpp  obstacle_distance_visualizer.hpp  obstacle_perception.hpp  virtual_scan.hpp
src/px4_navigation/launch/: obstacle_sensing.launch.py
src/px4_navigation/src/: a_star_planner.cpp  livox_mid360_processor.cpp  livox_mid360_processor_main.cpp  local_plan_grid.cpp  obstacle_distance_publisher.cpp  obstacle_distance_publisher_main.cpp  obstacle_distance_visualizer.cpp  obstacle_distance_visualizer_main.cpp  obstacle_perception.cpp  obstacle_perception_main.cpp  virtual_scan.cpp
src/px4_navigation/test/: test_a_star_planner.cpp  test_local_plan_grid.cpp  test_obstacle_perception.cpp  test_virtual_scan.cpp
src/px4_ros_com/: CMakeLists.txt  package.xml
src/px4_ros_com/include/px4_ros_com/: frame_transforms.hpp  time_sync.hpp  topic_helpers.hpp
src/px4_ros_com/test/: test_frame_transforms.cpp  test_time_sync.cpp  test_topic_helpers.cpp
src/px4_visualization/: package.xml  setup.py
(+28 files in other folders)
