<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema" ?>
<package format="3">
  <name>px4_mapping</name>
  <version>0.0.1</version>
  <description>UAV mapping and odometry package.</description>
  <maintainer email="TanDat.Emb@gmail.com">TanDatEmb</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>px4_nav_common</depend>
  <depend>px4_ros2_utils</depend>
  <depend>px4_msgs</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>pcl_conversions</depend> -->
  <!-- <depend>libpcl-all-dev</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
