<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema" ?>
<package format="3">
  <name>px4_visualization</name>
  <version>0.0.1</version>
  <description>RViz, plotting and telemetry helpers for the PX4 navigation stack.</description>
  <maintainer email="TanDat.Emb@gmail.com">TanDatEmb</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
